kubernetes/apps/observability/thanos/app/httproute.yaml
---
# Thanos Query Frontend HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos
spec:
  hostnames: ["thanos.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: thanos-query-frontend
          namespace: observability
          port: 9090
---
# Thanos Bucket Web HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-bucket
spec:
  hostnames: ["thanos-bucket.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: thanos-bucketweb
          namespace: observability
          port: 8080
